[package]
name = "LoxVM"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
 num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
once_cell = "1.19.0"

